--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <nav class="navbar">
+            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -173,8 +174,7 @@
                     <p>&copy; 2024 Impulse Event. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
-                    <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-icon"><img src="assets/instagram.jpg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/yourprofile" target="_blank" class="social-icon"><img src="assets/facebook.png" alt="Facebook"></a>
+                    <li><a href="#" class="social-icon"><img src="assets/impulse .png" alt="impulse logo"></a></li>
                 </div>
             </div>
         </footer>
